--- a/Software/PresentationLayer/Invoices.resx
+++ b/Software/PresentationLayer/Invoices.resx
@@ -117,4 +117,38 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnDetails.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAT
+        qwAAE6sBnBsJ0QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIzSURBVFhH1ZdP
+        SxtRFMWnO123+h1saXWhFheFJBOs+nEqQkJKu1UsXcxkKl11Z2gNaLSlC7+DgivbuC0oiAXdJpzeO3OH
+        Ia93ntO8BvHADyaZ8+55mTfvT7x7qcUtTPof8KzcxEolxHI1xFP+Tm6PRhT2vBJhs9JEl4BKhJ+xJ8C8
+        NHOXH+AxFf2iBlooRzgsRZiRMkMIeOA38YaK9c3i/0CfhqjBtaRqMS28xzg1/mwUc6FV+oQxKX+LqLfU
+        622liCs7hZ4EjfdbpfH/gYfDJp5OZCw05mu7wNkF0D0HVvd0j0Lf+mLSVPuuNFLh4KubBL7WPBp+iK8S
+        N6h4nisN8hi2A4wfYU5iM9GNd6bRBj92DmZe0XBonjxojdiQ2EzxKqaYR0RXYhPxOq6YRkrpIx5JvOfx
+        m6mZbLSPgcvrhPaR7rHBm5nE0+OnHU0z2eDg9CXka81jg17EJYmnDYc+aCYbaXiK5rFRDvFS4mkKBpjW
+        TDZcO8CLnsR73osAE5rJhmsHaKd9KPGJ6MsfpsmGUwdoyktspvgko5lzcOpAE+sSm4mPUYoxF5cOqEsx
+        i25+M815OHSgI3F/S7bjntFA5dfvLJyvNY9Cjza9JxKni0yvjUYqtX3g4CSh1tE9JhRelxiL7vpIxuID
+        JDVoGQWGh35Q8UNpquRJNKhAoXciBx7zeuFfrqkaYWrYPyYDO56reO7ySYaK21bMU/aUQsxKs9GI9454
+        yvI2Ln9OBw4Y90ee9wcXMrrHiuTeGwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6AAAAOgBhtX2rwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJlSURBVFhHzZfN
+        TttAEMd9KQVBe0JCHAvc6KESL8CJKnG8dkBG8AJ9kEoI3gBID9wRtksrVeqtiCR8XEDQF2gFB5ojIJFe
+        zH/sNVTOrLHjRepf+kkb7+zMeL88MfJK7IpX1cBZrvn2p6rvHJu++GP69t+YqH0EGmgvka0cVl7vvfnx
+        qm+vw/ktCHNyS4kikSnpprjcbXfIDMRH07NvmAB5oRlaq3yrvJRu84kyx8CzfxyVw7Nb8Dkm3WcL6/wO
+        03fFOioBlvG36dffyjC86M2fI/gDgf1LOROzW7ODMDrpGaSfNrsnog3HD+ih5jth86IVnlydRjQv22Et
+        cFhbDszyqgwbi45akd1uf54P06rvuqytgm4lcCZleGy8+JxzhiwaEiAaUXCsx2v8KHLJ6EkAM467ZoSO
+        3TJrkIGmGQgRe9GgK5PrzEJXAqYnNrH+9GFhOjPQlQBe/sBAo5PuSGjheJVV+/KA9U3QpUcJdNMdCWed
+        c+mmf513frK+JXf/RQLKJaAbrqyeXIL+NuGCdP8oesbZZpFsQpRRvIEKXQmADSQglpiOTPQlIFwqvUbw
+        47q3U42WBJKrmFT0NtSTAG7BRLIGpAKSN06hIYE764v1RoaPhYdrKSMlVJDsXzQfChJq0zPOVsGKDPuo
+        mc0PL9CxlzLUDypkZZlOBWNcvTIDdZBVlCai0vlZkkBwa8ealmGyZX21Rqu++ME66ocif0wS0TrheK7C
+        gfJjlQMau4LzPiDdFpfpLUzASaNI1Qyu6Zz3HLUyoluLajg430Ayh/QlQ5vesBu18SyuroU7931uWA57
+        QoZxD5S6O93Vo8q7AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
